# secureshare_backend

./: .example.env  Cargo.toml  README.md  deps.sh
migrations/: 20241003125923_tables.sql
src/: config.rs  main.rs  model.rs
